<resources>
    <string name="app_name">MyApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="update_profile">Update Profile</string>
    <string name="contact_list">Contact List</string>
    <string name="img_task">Image Task</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="home">Home</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="search">Search Image</string>
    <string name="PIXABAY_API_KEY">16012385-d862ade495a6123395153a6ec</string>
    <string name="no_internet">Ops, we could not find an active internet connection…</string>
    <string name="error">Ops, something is not right…</string>
    <string name="retry">RETRY</string>
    <string name="no_results">No results for the query :(</string>
    <string name="like">Like</string>
    <string name="favorite">Favorite</string>
    <string name="comments">Comments</string>
    <string name="search_now">Search</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="enter_mobile_num">Enter Mobile No.</string>
    <string name="cannot_use">Can not use this image as profile</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_an_option_to_pick_image">CHOOSE IMAGE</string>
    <string name="choose">Choose from below options</string>
    <string name="camera_select">Open Camera</string>
    <string name="gallery_select">Open Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Please enter first name</string>
    <string name="enter_last_name">Please enter Last Name</string>
    <string name="enter_valid_email_address">Please enter valid Email Address</string>
    <string name="plz_enter_valid_number">Please enter valid phone number</string>
</resources>
