<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/nav_contact_list"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/contact_list" />
        <item
            android:id="@+id/nav_image_task"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/img_task" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/action_logout" />
    </group>

<!--    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>-->

</menu>
