<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".pixabayapp.activities.ImageDisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/list_view"
            android:id="@+id/list_view_tv"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:background="@drawable/light_blue_button_semi"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/grid_view"
            android:id="@+id/grid_view_tv"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@drawable/blue_button_semi"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_list"
        android:layout_width="match_parent"
        android:layout_marginTop="55dp"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <ProgressBar
        android:id="@+id/activity_main_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/activity_main_no_results_text"
        style="@style/NoResultsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_results"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
