<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_top_round_box"
    android:layout_height="wrap_content">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/need_help_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="45dp"
                    android:gravity="center"
                    android:textColor="#FF0A0A0A"
                    android:visibility="invisible"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <TextView
                    android:id="@+id/contact_support"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/choose"
                    android:textColor="#FF8F8F8F"
                    android:textSize="18sp" />

            <LinearLayout
                    android:id="@+id/multiple_btns_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                <Button
                        android:id="@+id/select_from_camera"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/blue_button_semi"
                        android:gravity="center"
                        android:text="@string/camera_select"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                <Button
                        android:id="@+id/select_from_gallery"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="13dp"
                        android:layout_weight="1"
                        android:background="@drawable/blue_button_semi"
                        android:gravity="center"
                        android:text="@string/gallery_select"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />

                <Button
                        android:id="@+id/cancel"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="13dp"
                        android:layout_weight="1"
                        android:background="@drawable/blue_button_semi"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <!-- <ImageView
                    android:id="@+id/center_image"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_person_black_24dp"
                    android:layout_gravity="center_horizontal|center_vertical"/>-->

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgcenter_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:baselineAligned="false"
                android:gravity="center"
                android:src="@drawable/ic_person_black_24dp"
                app:civ_border_color="@color/light_blue"
                app:civ_border_width="5dp" />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>